# 4Thrives-Track-2

./: .dockerignore  .env  .env.example  .gitignore  AGENT_ANDRII_SPEC.md  AGENT_COORDINATION.md  AGENT_DAVID_SPEC.md  AGENT_FARHAN_SPEC.md  Dockerfile  HYPOTHESES.md  LICENSE  LOCAL_FULL_LOOP_COMMANDS.md  README.md  REPORT.md  cluster_job.sh  compose.yaml  package-lock.json  package.json  prove_it.py  pyproject.toml  requirements.txt  uniqa-pipeline  uniqa_pipeline.py
.do/: app.yaml
admin-portal/: index.html  package.json  vite.config.ts
browser-runner/: README.md  backend_client.py  errors.py  event_factory.py  live_page.py  llm_persona.py  persona_policy.py  playwright_config.py  run_batch.py  run_session.py
case_materials/: persona_peter_segment_3.md  personas.json  personas_comparison_matrix.md
coach-api/: package.json  tsconfig.json  vitest.config.ts
coach_sim/: README.md  __init__.py  abandonment.py  adaptive_coach.py  coach.py  demo.py  detector.py  journey.py  llm_persona.py  metrics.py  personas.py  run_cluster.py  run_learning.py  run_sim.py  signals.py  sim.py
evaluation/: compare_modes.py  generate_ab_report.py  metrics.py  report_bulk_runs.py  reports.py  run_experiment.py
extension/: package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
leonardo/: FULL_LOOP_COMMANDS.md  README.md  apptainer.def  env.example  pixi.toml  slurm_browser_batch.sh  slurm_build_datasets.sh  slurm_bulk_live.sh  slurm_bulk_live_vllm.sh  slurm_common.sh  slurm_evaluation_experiment.sh  slurm_replay.sh  (+3 more)
leonardo-vllm/: pixi.toml
(+179 files in other folders)
