[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "coach-sim"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.36",
    "pandas>=2.0",
    "altair>=5.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["coach_sim*"]
